# TODO-app

./: docker-compose.yml
client/: next.config.js  package-lock.json  package.json
client/app/: layout.tsx  page.tsx  providers.tsx
client/app/hooks/: useQueryParams.tsx
client/components/: CreateForm.tsx  CreateTask.tsx  Filter.tsx  RadioGrp.tsx  Search.tsx  Task.tsx  TaskInfo.tsx
client/components/Form/: CreateTask.tsx  TaskForm.tsx
client/components/Task/: Task.tsx  Tasks.tsx
client/components/UI/: Modal.tsx
client/components/Util/: Filter.tsx
client/lib/schemas/: task.ts
server/: alembic.ini  database.py  main.py  models.py  pyproject.toml  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 024574799165_add_date_to_todo.py  a70666a6a949_add_date_to_todo.py
server/app/: config.py  main.py  models.py  schemas.py
server/app/routers/: todoRouter.py
server/app/services/: todoService.py
server/routers/: todo.py
